// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChaosExperiment Step Edit View edit mode works 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main chaosExperimentStep"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 75%;"
        >
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        step1
                      </span>
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="pipeline.stepNamePlaceholder"
                      type="text"
                      value="step1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="chaos.pipelineStep.description"
                  >
                    desc
                  </textarea>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group"
            data-id="spec.expectedResilienceScore-2"
          >
            <div
              class="bp3-form-content"
            >
              <label
                class="bp3-label"
              >
                chaos.selectChaosExperiment
              </label>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                id="chaosExperimentReferenceField"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  001167e9-7b03-48d7-97f3-c1b328065f5d
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="bp3-form-group expectedResilienceScoreField"
                data-id="spec.expectedResilienceScore-3"
              >
                <label
                  class="bp3-label"
                  for="spec.expectedResilienceScore"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_spec.expectedResilienceScore"
                  >
                    Expected Resiliency Score
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.expectedResilienceScore"
                      type="text"
                      value="12"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main PageBody--pageBody"
          data-name="page-body"
        >
          <div
            class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
            style="width: 100%; height: 100%;"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
              style="align-items: center; width: 500px;"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="32"
                  viewBox="0 0 20 20"
                  width="32"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
              >
                We cannot perform your request at the moment. Please try again.
              </p>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChaosExperiment Step Edit View should render properly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main chaosExperimentStep"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 75%;"
        >
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="pipeline.stepNamePlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="description-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="bp3-form-group"
            data-id="spec.expectedResilienceScore-1"
          >
            <div
              class="bp3-form-content"
            >
              <label
                class="bp3-label"
              >
                chaos.selectChaosExperiment
              </label>
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                id="chaosExperimentReferenceField"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  chaos.selectChaosExperiment
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <div
                class="bp3-form-group expectedResilienceScoreField"
                data-id="spec.expectedResilienceScore-2"
              >
                <label
                  class="bp3-label"
                  for="spec.expectedResilienceScore"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_spec.expectedResilienceScore"
                  >
                    Expected Resiliency Score
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.expectedResilienceScore"
                      type="text"
                      value="50"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
            style="align-items: center; width: 500px;"
          >
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
              data-icon="steps-spinner"
            >
              <svg
                height="32"
                viewBox="0 0 128 128"
                width="32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                    fill="#ff8e02"
                  />
                  <path
                    d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                    fill="#ffddb3"
                    fill-opacity="0.3"
                  />
                  <path
                    d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                    fill="#ffd29a"
                    fill-opacity="0.4"
                  />
                  <path
                    d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                    fill="#ffc680"
                    fill-opacity="0.5"
                  />
                  <path
                    d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                    fill="#ffbb67"
                    fill-opacity="0.6"
                  />
                  <path
                    d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                    fill="#ffb04d"
                    fill-opacity="0.7"
                  />
                  <path
                    d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                    fill="#ffa535"
                    fill-opacity="0.8"
                  />
                  <path
                    d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                    fill="#ff991b"
                    fill-opacity="0.9"
                  />
                  <animatetransform
                    attributeName="transform"
                    calcMode="discrete"
                    dur="1200ms"
                    repeatCount="indefinite"
                    type="rotate"
                    values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
                  />
                </g>
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
            >
              Loading, please wait...
            </p>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
